--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="8"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/mImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:scaleType="fitCenter"
             android:background="@drawable/border"
-            />
+            android:scaleType="fitCenter" />
 
+        <ProgressBar
+            android:id="@+id/pBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="20dp"
+            android:scaleType="fitCenter"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/ImageViewText"
@@ -37,10 +44,11 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_gravity="bottom"
 
-        android:padding="2dp"
-        android:layout_gravity="bottom">
+        android:orientation="horizontal"
+        android:padding="2dp">
+
         <Button
             android:id="@+id/getPrev"
             android:layout_width="wrap_content"
@@ -52,17 +60,17 @@
             android:text="prev"
             android:textColor="#FFFFFF" />
 
-    <Button
-        android:id="@+id/getNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_weight="2"
-        android:background="#000000"
-        android:padding="5dip"
-        android:layout_marginLeft="5px"
-        android:text="next"
-        android:textColor="#FFFFFF" />
+        <Button
+            android:id="@+id/getNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginLeft="5px"
+            android:layout_weight="2"
+            android:background="#000000"
+            android:padding="5dip"
+            android:text="next"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 </LinearLayout>
 
